# levin

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  DESIGN.md  Dockerfile.e2e-desktop  INSTALL.md  LICENSE  PROGRESS.md  README.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_0.3.4.md  RELEASE_NOTES_0.4.0.md  RELEASE_NOTES_0.4.1.md  RELEASE_NOTES_0.4.2.md  RELEASE_NOTES_0.4.3.md  WEBTORRENT.md  docker-compose.e2e.yml
.github/workflows/: android-ci.yml  build.yml  ci.yml  release.yml
android/: .gitignore  README.md  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/yoavmoshe/levin/: BootReceiver.kt
android/app/src/main/java/com/yoavmoshe/levin/data/: Settings.kt  SettingsRepository.kt  Statistics.kt  StatisticsRepository.kt
android/app/src/main/java/com/yoavmoshe/levin/monitoring/: NetworkMonitor.kt  PowerMonitor.kt  StorageMonitor.kt  TorrentWatcher.kt
android/app/src/main/java/com/yoavmoshe/levin/service/: LevinService.kt  NotificationHelper.kt  SessionManager.kt
android/app/src/main/java/com/yoavmoshe/levin/state/: LevinState.kt  LevinStateManager.kt
android/app/src/main/java/com/yoavmoshe/levin/ui/: MainActivity.kt  SettingsFragment.kt  StatsFragment.kt
android/app/src/main/java/com/yoavmoshe/levin/util/: AnnasArchivePopulator.kt  FormatUtils.kt
android/app/src/main/res/layout/: activity_main.xml  fragment_stats.xml
android/app/src/main/res/menu/: bottom_nav_menu.xml
android/app/src/main/res/mipmap-mdpi/: README.txt
android/app/src/main/res/navigation/: nav_graph.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: colors.xml
android/app/src/main/res/xml/: preferences.xml
build-real/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-real/Testing/Temporary/: CTestCostData.txt
build-real/liblevin/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_c_api  test_disk_deletion  test_disk_manager  test_state_machine
cli/: CMakeLists.txt  cli_main.cpp
config/: levin.toml.example
e2e/: README.md  helpers.bash  run_all_tests.sh  test_budget.bats  test_lifecycle.bats  test_power.bats  test_storage.bats
e2e/android/: helpers.bash  run_tests.sh  test_helper.bash  test_lifecycle.bats  test_state.bats  test_state_machine.bats  test_storage.bats  test_torrents.bats
e2e/desktop/: run_tests.sh  test_config.toml.example  test_helper.bash  test_power.bats  test_state_machine.bats  test_storage.bats
liblevin/: CMakeLists.txt
liblevin/include/: annas_archive.h  disk_manager.h  levin_log.h  liblevin.h  state_machine.h  statistics.h  torrent_session.h  torrent_watcher.h
liblevin/src/: annas_archive.cpp  disk_manager.cpp  levin.cpp  state_machine.cpp  statistics.cpp  stub_torrent_session.cpp  torrent_session.cpp  torrent_watcher.cpp
liblevin/tests/: test_c_api.cpp  test_disk_deletion.cpp  test_disk_manager.cpp  test_state_machine.cpp  test_statistics.cpp  test_torrent_session.cpp
liblevin/tests/fixtures/: test.torrent
packaging/: README.md
packaging/aur/: PKGBUILD  levin.install
packaging/deb/DEBIAN/: control
packaging/debian/: changelog  control  copyright  install  postinst  prerm  rules
packaging/homebrew/: README.md  levin.rb
packaging/rpm/: levin.spec
packaging/systemd/: levin.service
scripts/: add_websocket_tracker.sh  check_torrent.sh  install.sh  levin.service
src/: annas_archive.cpp  annas_archive.hpp  cli_client.cpp  cli_client.hpp  cli_server.cpp  cli_server.hpp  config.cpp  config.hpp  daemon.cpp  daemon.hpp  disk_monitor.cpp  disk_monitor.hpp  logger.cpp  logger.hpp  main.cpp  main_old.cpp  piece_manager.cpp  piece_manager.hpp  power_monitor.cpp  power_monitor.hpp  session.cpp  session.hpp  state_machine.cpp  state_machine.hpp  statistics.cpp  statistics.hpp  torrent_watcher.cpp  torrent_watcher.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  test_config.cpp  test_disk_monitor.cpp  test_utils.cpp
